[package]
name = "tucan"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "A simple, fast, and multithreaded interner with loose type requirement."
repository = "https://github.com/Dherse/tucan/tree/main"
authors = [ "Sébastien d'Herbais de Thun (Dherse) <sebastien.d.herbais@gmail.com>" ]
keywords = ["interner", "intern", "string", "str", "concurrent" ]
categories = ["data-structures", "concurrency"]

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.1"
siphasher = "0.3.10"
twox-hash = "1.6.3"
