[package]
authors = [
	"Sébastien d'Herbais de Thun (Dherse) <sebastien.d.herbais@gmail.com>",
]
categories = ["data-structures", "concurrency"]
description = "A simple, fast, and multithreaded interner with loose type requirement."
edition = "2021"
keywords = ["interner", "intern", "string", "str", "concurrent"]
license = "0BSD"
name = "tucan"
repository = "https://github.com/Dherse/tucan/tree/main"
version = "0.1.4"

[features]
default = [ ]
concurrent = [ "dashmap", "once_cell" ]

[dependencies]
dashmap = { version = "5.4.0", optional = true }
once_cell = { version = "1", optional = true }
parking_lot = "0.12"
siphasher = "0.3"
twox-hash = "1"
