[package]
authors = [
	"Sébastien d'Herbais de Thun (Dherse) <sebastien.d.herbais@gmail.com>",
]
categories = ["data-structures", "concurrency"]
description = "A simple, fast, and multithreaded interner with loose type requirement."
edition = "2021"
keywords = ["interner", "intern", "string", "str", "concurrent"]
license = "Unlicense"
name = "tucan"
repository = "https://github.com/Dherse/tucan/tree/main"
version = "0.1.0"

[dependencies]
once_cell = "1"
parking_lot = "0.12"
siphasher = "0.3"
twox-hash = "1"
